[bugfix] Update rubocop to the latest

--- a/tests/integration/build_packages/Vagrantfile
+++ b/tests/integration/build_packages/Vagrantfile
@@ -47,10 +47,10 @@ Vagrant.configure("2") do |config|
     v.cpus = 1
   end
   config.vm.box = "trombik/ansible-freebsd-10.3-amd64"
-  boxes = %w(
+  boxes = %w[
     trombik/ansible-freebsd-10.3-amd64
     trombik/ansible-freebsd-11.1-amd64
-  )
+  ]
 
   boxes.each_with_index do |_box, i|
     config.vm.define "server#{i + 1}" do |c|
