--- a/tests/serverspec/default.yml
+++ b/tests/serverspec/default.yml
@@ -1,6 +1,7 @@
+---
 - hosts: localhost
   roles:
-    - name: reallyenglish.git
+    - name: trombik.git
     - ansible-role-poudriere
   vars:
     poudriere_package: ports-mgmt/poudriere-devel
