--- a/tests/serverspec/remove.yml
+++ b/tests/serverspec/remove.yml
@@ -1,3 +1,4 @@
+---
 - hosts: localhost
   pre_tasks:
     - shell: (echo GIT_URL=https://github.com/reallyenglish/freebsd-ports-mini.git; echo BASEFS=/usr/local/poudriere; echo DISTFILES_CACHE=/usr/ports/distfiles) | tee -a /usr/local/etc/poudriere.conf
@@ -17,7 +18,7 @@
     - command: poudriere ports -c -p mini -m git -B 20170222
     - command: poudriere jails -c -j 10_3 -m http -v 10.3-RELEASE
   roles:
-    - name: reallyenglish.git
+    - name: trombik.git
     - ansible-role-poudriere
   vars:
     poudriere_config:
