--- a/tests/serverspec/remove.yml
+++ b/tests/serverspec/remove.yml
@@ -6,22 +6,27 @@
         dest: "{{ poudriere_conf_d }}"
         mode: 0755
         state: directory
+    - file:
+        dest: /usr/local/poudriere
+        mode: 0755
+        state: directory
     - copy:
         dest: "{{ poudriere_conf_d  }}/make.conf"
         content: "FOO=bar"
     - pkgng:
-        name: "{{ item }}"
+        name:
+          - poudriere
+          - git
         state: present
-      with_items:
-        - poudriere
-        - git
     - command: poudriere ports -c -p mini -m git -B 20170222
-    - command: poudriere jails -c -j 10_3 -m http -v 10.3-RELEASE
+    - command: poudriere jails -c -j 11_2 -m http -v 11.2-RELEASE
   roles:
     - name: trombik.git
     - ansible-role-poudriere
   vars:
+    poudriere_package: ports-mgmt/poudriere-devel
     poudriere_config:
+      BASEFS: /usr/local/poudriere
       FREEBSD_HOST: http://ftp.freebsd.org
       NO_ZFS: "yes"
       GIT_URL: "https://github.com/reallyenglish/freebsd-ports-mini.git"
@@ -33,7 +38,7 @@
         branch: 20170222
         state: absent
     poudriere_jails:
-      "10_3":
+      "11_2":
         state: absent
     poudriere_make_conf_files:
       - name: make.conf
