bugfix: update Rakefile to the latest version

--- a/tests/integration/build_packages/Rakefile
+++ b/tests/integration/build_packages/Rakefile
@@ -1,11 +1,17 @@
 require "tempfile"
 require "pathname"
-require "net/http"
-require "tempfile"
+
+ENV["TERM"] = "xterm" # XXX TERM must be defined or pkg_add fails
 
 test_dir = Pathname.new(__FILE__).dirname
 role_dir = Pathname.new(test_dir).parent.parent.parent
 role_name = Pathname.new(role_dir).basename
+
+def vagrant(cmd)
+  Bundler.with_clean_env do
+    sh "vagrant #{cmd}"
+  end
+end
 
 task default: %w[test]
 
@@ -14,12 +20,19 @@ task test: [:clean, :prepare, :do_test, :ensure_clean] do
 end
 
 desc "clean"
-task clean: [:clean_vagrant, :clean_roles] do
+task clean: [:clean_vagrant, :clean_role] do
 end
 
 desc "destroy vagrant nodes"
 task :clean_vagrant do
-  sh "vagrant destroy -f"
+  # XXX `vagrant destroy` failes with exit status 1 when there is no VM to
+  # destroy
+  vagrant "destroy -f || true"
+end
+
+desc "rm roles/*"
+task :clean_role do
+  sh "rm -rf roles/*"
   sh "rm -f *.retry"
 end
 
@@ -29,32 +42,23 @@ end
 
 desc "import required roles"
 task :prepare_roles do
-  # rubocop:disable Metrics/LineLength
-  sh "if [ -f requirements.yml ]; then ansible-galaxy install -r requirements.yml -p roles; fi"
-  # rubocop:enable Metrics/LineLength
-end
-
-desc "clean up required roles"
-task :clean_roles do
-  sh "rm -rf roles/*"
+  sh "ansible-galaxy install -r requirements.yml -p roles"
 end
 
 desc "prepare role"
 task :prepare_role do
-  # rubocop:disable Metrics/LineLength
-  ignore_files = %w[vendor .kitchen .git tests spec].map { |f| "#{role_name}/#{f}" }
-  # rubocop:enable Metrics/LineLength
+  ignore = %w[vendor .kitchen .git tests spec].map { |f| "#{role_name}/#{f}" }
   tmpfile = Tempfile.new(".tarignore")
-  tmpfile.write ignore_files.join("\n")
+  tmpfile.write ignore.join("\n")
   tmpfile.close
   # rubocop:disable Metrics/LineLength
-  sh "tar -c -X #{tmpfile.path} -C #{role_dir.parent} -f - #{role_name} | tar -x -C #{test_dir}/roles -f -"
+  sh "tar -c -X #{tmpfile.path} -C #{role_dir.parent} -f - #{role_name} | " + "tar -x -C #{test_dir}/roles -f -"
   # rubocop:enable Metrics/LineLength
 end
 
 desc "vagrant up"
 task :vagrant_up do
-  sh "vagrant up"
+  vagrant "up"
 end
 
 desc "do clean task even if it has been executed"
